[package]
name = "pink072"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "PINK-072 specification implementation for embedding payloads in pink cover images"
repository = "https://github.com/kako-jun/pink-072"
readme = "README.md"
keywords = ["steganography", "image", "encoding"]
categories = ["encoding", "multimedia::images"]

[features]
default = []
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook"] }

[package.metadata.husky]
pre-commit = "cargo fmt -- --check && cargo clippy -- -D warnings"
